--- a/bar_chart/style.css
+++ b/bar_chart/style.css
@@ -2,6 +2,8 @@ body {
     width: 800px;
     margin: 25px auto;
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+    background-color: rgb(231, 231, 231);
+    color: rgb(62, 62, 62);
 }
 
 rect {
