--- a/bar_chart_2/style.css
+++ b/bar_chart_2/style.css
@@ -1,7 +1,15 @@
+header {
+    margin-left: 20%;
+}
+
 body {
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     background-color: rgb(231, 231, 231);
     color: rgb(62, 62, 62);
+}
+
+.radio {
+    margin-left: 20%;
 }
 
 rect {
