--- a/D3_bar_chart/style.css
+++ b/D3_bar_chart/style.css
@@ -1,3 +1,8 @@
+* {
+    margin: 0;
+    box-sizing: border-box;
+}
+
 header {
     margin-left: 20%;
 }
@@ -6,9 +11,11 @@ body {
     font-family: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
     background-color: rgb(231, 231, 231);
     color: rgb(62, 62, 62);
+    margin-left: 10%;
 }
 
 .radio {
+    margin-top: 20px;
     margin-left: 20%;
 }
 
